@@ -16,19 +16,22 @@ DIST d1xr-sc55-music.zip 72803408 SHA256 b27f7b9dc5f9c2744402c56c9499dfd9503c17e
 DIST d1xrdata.zip 1364601 SHA256 54fdc858925b0b41f7ac7ca1fc03fee325f4e5e52e6cc09d4ba4b8b4d4fdd53b SHA512 9ca4ac459367476250bef6eb7f3fccdb4070f4ed5c00dad318c1d63e7bcb2c61ef8cb8233f3f2156f46ed4ba57232033f2b456078f883a96ab7ebd5b5df84c59 WHIRLPOOL 4e4f54e3ad31b55d04344dce64c7398e4f1cb58ef8017dc8c118a13033d2255c0e8d27ffd5045ed137abef54332cbb8ee8f9754d6a89f086c71a40114596ac48
 DIST descent_midi.zip 416641 SHA256 0def03b36edb592fc9eda6c3f1b6e9c47a7bde89909c911f632f5a8fa7ba684a SHA512 0b2f7f2318f067cae6a73fc21d7d41642fe5c1e7eb74c15e4c87d007e12639ed991bb0182cc7cef527a090ce392e323df3ffbaa503fe2ef7f4de445d0dcc50bd WHIRLPOOL 8cd23f3bf66bab2bb26911e1fba4117c793123a75e4770eb073bf6e86169ee725e3fb2e3b89a3b0ed0db843bf6dc433563cf9cb8df3503a9dd8c93875caad2e9
 DIST dxx-rebirth_icons.zip 137392 SHA256 d38ba8730335b13d63ddf9119ad180e3f6c29e3f238baad87080cf60c4730efc SHA512 d13edc1897cf047a1fa0bf23c2b64334f095d9a28255fb500f7f0ffb6122559eb10fea372b02c52c71ac467d8276ece4c7dff4069585ab74dfa9ebb8bda2deb2 WHIRLPOOL d32d828501a2d5f65e1373a8f042be539f7f6433565dd2130173aea673d58dd9063b52005a6fe7398bcb88a996fd9d88e189d582c16ed4bc9bd7fc6c465087b3
-EBUILD d1x-rebirth-0.50.ebuild 3427 SHA256 a9f2c846bc08d6b52fbaa5bbe5da44cdb898dc477a7fc7fa23ce5591ff0cece5 SHA512 1bf1e5bf3585d7ef09d13fb1ba07c3ecbb0da96bea3fa6d26f56ae9eb4f5cc0f11c013c84f51d462b30f067402122d0df88d2f58acc3446cfd5cdbb44fa5c064 WHIRLPOOL 4fdf49a640b4746232cf3777c4184508a77b87a322e6ac16a6927e6175fd31d02af495ada143f3aacc6bc8d358782b70899deb8257a9049ca70d77a39a8be27d
-EBUILD d1x-rebirth-0.56.ebuild 2956 SHA256 a6b376a35df1a8a8f095854adebd6193b41070f0c25d5c92641f259bf7fa2d2a SHA512 43ea8a17139945f082b20488b941c48decb77a41dc814c5a512b355a59d6a1cef0ddf14c58a2309121eee62c261bfc0824a3fcb7be3a2560335f52d667f3b366 WHIRLPOOL 0a39251c49af41134920d8f55f2b5471bb81567a8ed801f575b2ce8643fa6690ab1b7da6d1e7ac3c10f5b096ee6441d1a033e5053ee932dca828b51601862204
+EBUILD d1x-rebirth-0.50.ebuild 3434 SHA256 c136acbe413fa1e574c95eff67ec743593c18c7850f642f573a1bbdfe808a5a6 SHA512 75b1771316590139fa6d1fca512c21f768fd8a5307a66b54a72a50bb170b1f8c59cc79b35eb59f1cbbb59b348d1b8eada0f16cce3d1448f0232cfd514ccf438d WHIRLPOOL b7bee7b47bb82287893750ddb5cc82e513f83c637c3af4798bb72d4153064e84a74f1f5351e5786917f362e3a4221c16cb0d5d09a30c06578d49d765be80f1e6
+EBUILD d1x-rebirth-0.56.ebuild 2961 SHA256 cb31664e388c416e78d84db63757e674d174d7821e237f32237072f0129069cb SHA512 af2f58d514b47e69b524a627ff669fea5c161c4b071794685d7dd797a56089dc3efd2dd5977e70fa81825f92c63d2a83855d1676e07df37016f89d73c047d31e WHIRLPOOL c6646a5705a6ce6aa008f73614b3c9917d7afedd0068453cd7a556c6f397b3a24dbe25558abc32880021ee9d6cc7a1ad5a7d1d91dd89a52eebf1a2ea2c3c4e72
 EBUILD d1x-rebirth-0.57.3.ebuild 3235 SHA256 14ce141a9fa84b945279e00ae2fce3572f1fe3f04a09c4c9159b97cfad8abc51 SHA512 90972e91e4da82808875dc916ec220b8ba9466a2463acf5bb2e1de4a68aa66ace9221cd10ba8d21e063cd53e911352edfedad9be7e7067bb878a0f99cf35a29e WHIRLPOOL ea1f661b6010ebf46d4c7a77909346c7442950fb5bd356268a67285282051704107802a42befc0d59b653b35062d5547dbe1c22ae345919ca711428f7953c6ad
-MISC ChangeLog 1963 SHA256 04963b165465680150fb9e5ce6e427640003a9497a36b83b3510bb5902b97a4a SHA512 3ca4b059c8fe704e0412599b68f46f9859656bdea59f6d807239d4b24bab2b9bfa51fe2e2e41e3437d1face1525a183f642a0348bcc6120e3be6d2c674bd60e4 WHIRLPOOL 4d24eae2f783e5d8e787501abd5845d880e5d1e5ddbd35c5fb768ce7b7b798b179b0e587e3eaf14ec5c7a53df39aa71f0970d86078fc1473abe39f36bed47b09
+MISC ChangeLog 2097 SHA256 1b27ab3edc74c60d4ca1e5d28a4c41ae77cf410a8cc27d78c5ab067de3d05831 SHA512 4389344bb5e3a639292b70b367202bb288772b103ca1d5c7550d58fb8f8da29c11729ba2d6a2a194d22bd4feb141c8213d83725d4078973f033bc46396abbbb6 WHIRLPOOL b5128290783b8aed049e5517b0f88456c0417551a26106025cebaf957d63175be323f04772cd4dc7e386d4977ae4898eb950e26477d6536807936821bc747cb4
 MISC metadata.xml 1239 SHA256 5755e5d1eb3341852dbfaeba79385f349db29398ee020e0d891cb15c57fbaa80 SHA512 3936be789eddf3dbb382c4b732debe216339ddc9544ddd1f3b829fb1dca6497a7b4864d072227f1832927897f20e19bd105697abeb1ecc6d342a15a28a6e74a6 WHIRLPOOL f40be3880864c41a7322d76e03296adb649ced0ea6892ac0d6cc2bfd45837bd8a4ea287a1cf2ffb861f605e5bd232eb8ebc491c90804e1d89b84342717b293f2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJREubmAAoJEFpvPKfnPDWz63UIAK1XHKD2cJhG1nfymTkRoNn2
-I+pvfZqHcW6MnJuvpvy4LEEfRQalHd4KGXLKouCxZ41/VHB0F7f3AAXVGhvX8pjf
-h/IKNKYfGeGBUG5uKS/8sAJCspS6qZmHFmrDgQHdSGp93+OEbUgghTGhheId8EuW
-KeuF1M4VdUvP4YZrpnQNnnvsvu92lUls3dLgdAKptWieqjzwcV49bwsca55EBuZP
-Az3u/iTRqtQrM44VR/JLMIkTkfCiBotzBEt/LZMnz4ehgIAKnj4ddmLMkh69PzYJ
-01ZzSpcIxkUK7j2J9uLFYrzBXL+zSLPIrFMhFjgxjsNpBvw8VMXbenL8QWGmiiU=
-=zAQv
+iQGcBAEBCAAGBQJTPks2AAoJEJQzkH1pP7W4pzUMAKtm2GYUqcbmkq7R74z9kOid
+QaZPZe2FgfmkypEzbLJrdpnWPvz6DZg8rcuGaH21BwlF/My+ljZs3HyQpYlP6/H6
+kXkxZ6L9kwl0Rjq+62l77VNmFvEHLbs3WOEidN6vkGZ8La+bBPOwFrYvfm8XLygD
+pQ9/aPfHQI7Fm4q4YTXVZc8P7VfnhjQa5KRKina/NtUU2hrr3U7CMmPhBuVHx6s9
+yIctQPen+qtNi9+1Pyz+zk/lwMwKqWOV3+QQ0ZHxZLjYNpVfs/Gxh9zXYiH3lwUN
+zU8pEGxJWlcNWkXY9ezT6dLLlz1UKwYVHDXLco8wikVS6pEOMFnnk6izvAd2mn8m
+8M6WKg9H4LGLlHfbiaaXEsdFhPbESQ1zObppEPkT1rkOTztEemLPiI80cU5egQSR
+RSzqtPDWnTyOWJRyk91DHl1YXwFn9swOelBAm2Gifx8WkJHvfMAm35yybGZaHOHa
+hqLB0tC0l7I0xpxkWaWgrgNm9DyHk5eqk39x+2eTNA==
+=1MJw
 -----END PGP SIGNATURE-----
