@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/d1x-rebirth-0.50.ebuild,v 1.4 2010/03/09 12:33:33 abcd Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/d1x-rebirth-0.50.ebuild,v 1.5 2014/04/04 05:56:31 ulm Exp $
 
 inherit eutils games
 
@@ -22,7 +22,7 @@ SRC_URI="${SRC_STEM}/oss/src/${FILE_START}.tar.gz
 # All 3 licences apply.
 LICENSE="D1X
 	GPL-2
-	as-is"
+	public-domain"
 SLOT="0"
 # Should work on amd64 also
 KEYWORDS="~amd64 x86"
