@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/d1x-rebirth-0.56.ebuild,v 1.4 2012/01/18 12:42:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/d1x-rebirth-0.56.ebuild,v 1.5 2014/04/04 05:56:31 ulm Exp $
 
 EAPI=2
 
@@ -17,7 +17,7 @@ SRC_URI="mirror://sourceforge/dxx-rebirth/${PN}_v${PV}-src.tar.gz
 	cdinstall? ( http://www.dxx-rebirth.com/download/dxx/res/d1datapt.zip )
 	linguas_de? ( http://www.dxx-rebirth.com/download/dxx/res/D${DV}XBDE01.zip )"
 
-LICENSE="D1X GPL-2 as-is"
+LICENSE="D1X GPL-2 public-domain"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="ipv6 linguas_de opengl timidity"
