@@ -8,18 +8,21 @@ DIST d2xr-briefings-ger.zip 11717 SHA256 e190321e657c1ad55998b91d610534fd0275f29
 DIST d2xr-opl3-music.zip 22710919 SHA256 6890c6cf8a40c30a2b88339fe1affd25d210e45b504b0f0f76dba7ba97f813d7 SHA512 876321a9a16403f6e9d12e10bb73c9cdc57e1a106fa64833a1be8cc17b74f6f13e57e40f051a1b40e7bc88b95bfe86cff181c93c8619383dfdeb74f36f5cce86 WHIRLPOOL 86cccdbe071654b7f3ba2f774c762b3ab81797916e8a2053466320a54693a1913de9a6759eb29a4acde5a5611c58d1371338bed140a4084f7d005d48151a639b
 DIST d2xr-sc55-music.zip 19579531 SHA256 ace152182c70b9a7ae6f911bddbc239566220a287ab5419cab260d5af739bf16 SHA512 290713b05627bf65bdc55fc6631a0c86e50f484a167f3fd20b3fe2bc5b772437939b5bf32eea852874dd983fbd47f160cae2412a2d6c5319f0d1583a33d28da6 WHIRLPOOL 1cc02d95dfffc36676a8cd3129580ba11c4a5cb13ee54bcdbe9e30e9fd9d8365bf0a8fc0d3e4b962607887b41bd056678d578cf9a5896ba1c9f4d1bef13c3edd
 DIST dxx-rebirth_icons.zip 137392 SHA256 d38ba8730335b13d63ddf9119ad180e3f6c29e3f238baad87080cf60c4730efc
-EBUILD d2x-rebirth-0.50.ebuild 2877 SHA256 94b1ecaa557e4446fb32a5a866f3898ea2bfb936e27351c74f0fcb016688028a SHA512 eaa862f1df5bf7afea460778c4c4a4238bed88ded49601fd15ffce32d640fb5983cac027c9574677ef6970870adc405026c4e73d8ccd05775b632adc79c42db4 WHIRLPOOL 12c09de4b45324fa918556016aa9069d021463c8e63924e794c4cf5d74c3916dc8ac9d2ef0f4c119233ec8d448ed2001692bddc7e76d7ac299ea9ec6a5e0ccce
+EBUILD d2x-rebirth-0.50.ebuild 2884 SHA256 6c55ee428769ffef0afb7973df0dbe89a758a5d065a98b82771d959825bc6088 SHA512 7b8dbb7a945894bbc41818f585771e36965844a17af89549494723cb3ba79d9e9fb3b5ef250525cf8c3dec0dd03cf39b0c38a2d95985032b365c440f19c22a74 WHIRLPOOL dcd17d2ebb1dc36258f6967fa67b85d74448e8a9e711db3360bf47229bad80f8cf9e8e465d9e1563dfb79e07641ccc26b703b9b1fe5a972659adfc58cdb297b0
 EBUILD d2x-rebirth-0.57.3.ebuild 2406 SHA256 383c8ff9c662b1b698e02476a5808f8fc7393579918c6d70e49a8169e5790c7c SHA512 cd37bd45e966924c0532e08677d8b3d3c5f4429615b593ac7c1780a3b987a337b5e5216eed9c2bf306ff05a7c9ba7019a2a50a75221b8f2479bfdf36819a3cc2 WHIRLPOOL 85484e9168ec0c28db750f66636f3d4082274af1a6e18ef018095fc600a8db5c58eca45cea1163da737aae0a0463eb14e6c0dadc981fd4639a8c1dad438bdbd9
-MISC ChangeLog 977 SHA256 b61e0584366e53063281c01746658337d1c617a5275f6e35fc57891586ea50e1 SHA512 4bfcbbb19e9d3efd89140970e765306fc0265db86913eb40fd5b4db692c59c1efa367907e39a05773e6fe7f8958c3e2e03484ad2c651755c01e8c7deafc3322e WHIRLPOOL 6439d9e04c57c1c56070cc15cf498517ae1d4eddd935dc9387d72a054700afb525c673bcae646815119136e5c967cd1fb96c62486213c41ba2195dec10b17eac
+MISC ChangeLog 1083 SHA256 5aef0ad30f0c343b6c506236ff5fb62a373b3bb98e60dcefa49fe28585607dbe SHA512 2d4377867237dad385a496172a423046efa52975f42c8fef0b88cee37e14e81be32d37f805de6e105da26791c50f54c52089f8737fdcc70b127f5f5574d6fba4 WHIRLPOOL bcd423a8b67aabcb348abf761a5ea5ea17bf23cd26690043befa1681c8480fd692dd0dc13e835540d8e9b8c1644dc01078b324aa7bf5137bea52e5e9166f4df4
 MISC metadata.xml 858 SHA256 1b93642d6915ecdbd9342f3341b8732cb8ad062771e547a904fe140a02200302 SHA512 3394f5107870a92ab61dc27555ac3d5c80c4e0abf778cd686216ba79b947ff01138cf9e2a568140b15eeb588a604d0e74a528528e0dedd1a7d8a9b18df684ecf WHIRLPOOL 2f4d81288d3d283548d02dab4519e273cd676b8b98876817052aa0272e3923cbaac16efe4d8198475e254c5522532578b481e24c3b189162400230666916bc44
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJREtCpAAoJEFpvPKfnPDWzN+cH/1wh31XFC4JAY2oB7tF5SRvm
-qOlI3zCeuR9rPjSsEc1eK2BdwmzBCBz63hQ0fhi4ZVSMpKWKl91agtM8C4XNgkhy
-tc7oyjXg87igwAey/IXUeCLwFPgiHee1UE4Tz/ftWdHd95pY8Z1AYGa/BENTajGu
-6hXuAYfD4akOLohtZiZpRX4eHorFFS6hOPrRCgBQxKWSK7g+UVT39ufvxEFU+i9B
-UDqXl4FpaGuwnetMUjyQkmtiX/e6Q0pviO2rydDAORKRemtgX2WQ0QcLWme88AMr
-1KyZP0O2EPwbfXeuTUuz4j3ihPn2EepJ+DZsiLiVlpQIeN03rfSvgr3gKF38VLY=
-=hlRE
+iQGcBAEBCAAGBQJTPktaAAoJEJQzkH1pP7W4T+sMAJKWobwOxNlqIn7NhfDEkoRw
+kPLxVcFBLt/oTpxCSBBja2OPybMIRs0x18X6UmVtsT5CBsMk2w0r4Gl14ZhAVSnH
+Vn/q2mmMbDS60Pg6ncLRuPQtNbaKxJ5vvoBXGqnOIG2VXHXDPYfZ8aEVAP7lZUUS
+Bw3Rf1KTlEWOm5oHAqBC8LKTiyPG9uSxvYbC0n68JZZPSGTpxWb/eLMLYS75DrEy
+qHjz+n3z0uVF5KwtjrdFbfOmuOd32UGeT/ic+2jwmoga2b/5MSvvdYwJZ64e4wYn
+8aVmMqjke4BcGeZODHmJqdhErOd3iX7VGjOxUm850dOsAW8QPpZ6gt/ehB2WasTt
+HeUWP9s4UTtU7PZ6N3wb9fJrff6sVlbdFKI2cYrvhkqMgwiB/zU799pxLvRkb0Q0
+yhM3TSBQflPuuFF16uFYvYmo+X0cEhxQd7nWJZw7ywnjs7QIpBf6A9S83VtwFjPY
+Ed+UobT4A0/cL8UhTmMT248+pcryJC/laWy/uQ3zFA==
+=F0Gm
 -----END PGP SIGNATURE-----
