@@ -5,10 +5,10 @@ EAPI=2
 HOMEPAGE=http://www.dxx-rebirth.de/
 IUSE=ipv6 linguas_de opengl timidity cdinstall
 KEYWORDS=~amd64 ~x86
-LICENSE=D1X GPL-2 as-is
+LICENSE=D1X GPL-2 public-domain
 PROPERTIES=cdinstall? ( interactive )
 RDEPEND=opengl? ( virtual/opengl virtual/glu ) dev-games/physfs[hog,zip] media-libs/libsdl[audio,opengl?,video] media-libs/sdl-mixer[timidity?] cdinstall? ( !games-action/descent1-demodata ) games-misc/games-envd
 SLOT=0
 SRC_URI=mirror://sourceforge/dxx-rebirth/d1x-rebirth_v0.56-src.tar.gz http://www.dxx-rebirth.com/download/dxx/res/d1xrdata.zip http://www.dxx-rebirth.com/download/dxx/res/dxx-rebirth_icons.zip timidity? ( http://www.dxx-rebirth.com/download/dxx/res/descent_midi.zip ) cdinstall? ( http://www.dxx-rebirth.com/download/dxx/res/d1datapt.zip ) linguas_de? ( http://www.dxx-rebirth.com/download/dxx/res/D1XBDE01.zip )
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cdrom	415b847346ef9001a89e5c7da6711215	eutils	af81d52c25ec93fbdff71e0efb0de7b7	games	016d5de1968de77e56a90938ed6e5aba	multilib	fac675dcccf94392371a6abee62d909f	portability	536c5e70c5fb252ed3b769e04aa3f05b	scons-utils	988e24b9e2e4642189b4e97c03e5ae71	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=b8a854ec0f84285a8e95bfad935818e1
+_md5_=d1c7b81276ee002d2f2d1bde355df8a0
