@@ -5,9 +5,9 @@ EAPI=2
 HOMEPAGE=http://www.dxx-rebirth.de/
 IUSE=awe32 debug mpu401
 KEYWORDS=~x86
-LICENSE=D1X GPL-2 as-is
+LICENSE=D1X GPL-2 public-domain
 RDEPEND=media-libs/alsa-lib media-libs/libpng >=media-libs/libsdl-1.2.9 >=media-libs/sdl-image-1.2.3-r1 >=dev-games/physfs-1.0.1[hog,zip] virtual/glu virtual/opengl x11-libs/libX11 x11-libs/libXext games-action/descent2-data games-misc/games-envd
 SLOT=0
 SRC_URI=http://www.dxx-rebirth.de/download/dxx/oss/src/d2x-rebirth_v0.50-src-20061025.tar.gz http://www.dxx-rebirth.de/download/dxx/res/dxx-rebirth_icons.zip
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	af81d52c25ec93fbdff71e0efb0de7b7	games	016d5de1968de77e56a90938ed6e5aba	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=11209cf684e069cfb301041f0445abd1
+_md5_=bca94f7f1c783c5c6621f4824ed1db18
