@@ -1,6 +1,9 @@
 # ChangeLog for games-action/d2x-rebirth
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/d2x-rebirth/ChangeLog,v 1.5 2013/02/06 21:11:58 hasufell Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/d2x-rebirth/ChangeLog,v 1.6 2014/04/04 05:57:19 ulm Exp $
+
+  04 Apr 2014; Ulrich Müller <ulm@gentoo.org> d2x-rebirth-0.50.ebuild:
+  Fix LICENSE in previous ebuild too.
 
 *d2x-rebirth-0.57.3 (06 Feb 2013)
 
