@@ -1,6 +1,10 @@
 # ChangeLog for games-action/d1x-rebirth
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/ChangeLog,v 1.10 2013/02/06 23:27:30 hasufell Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/ChangeLog,v 1.11 2014/04/04 05:56:31 ulm Exp $
+
+  04 Apr 2014; Ulrich Müller <ulm@gentoo.org> d1x-rebirth-0.50.ebuild,
+  d1x-rebirth-0.56.ebuild:
+  Fix LICENSE in previous ebuilds too.
 
 *d1x-rebirth-0.57.3 (06 Feb 2013)
 
